# coupon_assignment

./: .gitignore  README.md  memo.md  pyproject.toml
memo/: cv_maximization.md  math.md  report.md
notebook/: main.ipynb
src/: binary_var.py  continuous_var.py  csv_display.py  ml_module.py  multi_treatment.py  multi_treatment_optimization.py  single_treatment_optimization.py  single_treatment_uplift.py  utils.py
