[tool.poetry]
name = "coupon-assignment"
version = "0.1.0"
description = ""
authors = ["Taisuke Minami <tmnm13009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^2.3.4"
pandas = "^2.3.3"
scikit-learn = "^1.7.2"
lightgbm = "^4.6.0"
shap = "^0.49.1"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
pulp = "^3.3.0"
imbalanced-learn = "^0.14.0"
ipykernel = "^7.1.0"
iterative-stratification = "^0.1.9"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
